--- a/course/templates/course/branch_detail.html
+++ b/course/templates/course/branch_detail.html
@@ -1,25 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hellt</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+{% extends 'course/base.html' %}
 
-</head>
-<body>
+{% block content %}
     <h1>{{branch.name}}</h1>
     <p> Адрес: <strong> {{branch.address}} </strong> </p>
 
     <p> Группы данного филиала: </p>
-    <ul>
-        {% for g in groups %}
-            <li>{{g.name}}</li>
-        {% endfor %}
-    </ul>
+    {% for student in students %}
+    <h3>{{student.name}}</h3>
+    {% endfor%}
 
+    <a href = "{% url 'branch_edit' branch.id %}" class = 'btn btn-primary'>Change/Изменить</a>
+    <a href = "{% url 'branches_create'%}" class = 'btn btn-primary'>Create/Создать</a>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-</body>
-</html>
+{%endblock %}
