--- a/course/templates/course/branches-list.html
+++ b/course/templates/course/branches-list.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hellt</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+{% extends 'course/base.html' %}}
 
-</head>
-<body>
+{% block content %}
     <h1 style="text-align: center;"> Филиалы</h1>
+    <h1>Создать новый филиал</h1>
+    <a href = "{% url 'branches_create'%}" class = 'btn btn-primary'>Create/Создать</a>
     <table class="table table-bordered">
         <thead>
           <tr>
@@ -33,7 +27,5 @@
         
         </tbody>
       </table>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
-</body>
-</html>
+{% endblock %}
