--- a/course/templates/course/student_detail.html
+++ b/course/templates/course/student_detail.html
@@ -1,25 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hellt</title>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+{% extends 'course/base.html' %}
 
-</head>
-<body>
-    <h1>{{student.name}}</h1>
+{% block content %}
+
+{% if student.gender == "female" %}
+    <h1 style="color: pink;"> {{ student.name }}</h1>
+
+    {% else %}
+    <h1 style="color: blue;"> {{ student.name }}</h1>
+    
+    
+    {% endif %}
+
     <p> Адрес: <strong> {{student.address}} </strong> </p>
+    <p> Пол: <strong> {{student.gender}} </strong> </p>
+    <p>Дата рождения: <strong> {{student.date_of_birth}} </strong> </p>
+    <p>Группа :<strong> {{student.group}} </strong> </p>
 
-    <p> Группы данного филиала: </p>
-    <ul>
-        {% for g in students %}
-            <li>{{g.name}}</li>
-        {% endfor %}
-    </ul>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-</body>
-</html>
+    <a href = "{% url 'student_edit' student.id %}" class = 'btn btn-primary'>Change/Изменить</a>
+    <a href = "{% url 'students_create' %}" class = 'btn btn-primary'>Create/Создать</a>
+{% endblock %}
