--- a/course/templates/course/group_details.html
+++ b/course/templates/course/group_details.html
@@ -2,16 +2,30 @@
 
 {% block content %}
     <h1>{{ group.name }}</h1>
+    <h3>Создал: {{group.creator}}</h3>
     <p>Филиал: <strong>{{group.branch}}</strong> </p>
     <h1>Студенты:<h1>
     <ul>
-    {%for student in students %}
-    <li>
-        {{student.name}}
-    </li>
+    {% if students %}
+        {%for student in students %}
+        <li>
+            {{student.name}}
+        </li>
     {% endfor%}
+    {% else %}
+        <h1>Не найдены студенты</h1>
+    {% endif %}
+    {% if user.is_authenticated %}
     <a href = "{% url 'group_edit' group.id %}" class = 'btn btn-primary'>Change/Изменить</a>
-    <a href = "{% url 'groups_create' %}" class = 'btn btn-primary'>Create/Создать</a>
+    {% endif %}
+
+    {% if group.photo %}
+        
+        <img src="{{ group.photo.url }}" width="300" />
+
+    {% endif%}
+    
+
 
 {% endblock %}
 
