--- a/course/templates/course/student_detail.html
+++ b/course/templates/course/student_detail.html
@@ -10,12 +10,19 @@
     
     
     {% endif %}
+    <h3>Создал: {{student.creator}}</h3>
 
     <p> Адрес: <strong> {{student.address}} </strong> </p>
     <p> Пол: <strong> {{student.gender}} </strong> </p>
     <p>Дата рождения: <strong> {{student.date_of_birth}} </strong> </p>
     <p>Группа :<strong> {{student.group}} </strong> </p>
-
+    {% if user.is_authenticated %}
     <a href = "{% url 'student_edit' student.id %}" class = 'btn btn-primary'>Change/Изменить</a>
-    <a href = "{% url 'students_create' %}" class = 'btn btn-primary'>Create/Создать</a>
+    {% endif %}
+    {% if student.photo %}
+        
+        <img src="{{ student.photo.url }}" width="300" />
+
+    {% endif%}
+
 {% endblock %}
