--- a/course/templates/course/students-list.html
+++ b/course/templates/course/students-list.html
@@ -2,8 +2,10 @@
 
 {% block content %}
     <h1 style="text-align: center;"> Студенты </h1>
+    {% if user.is_authenticated %}
     <h1>Создать нового студента</h1>
     <a href = "{% url 'students_create' %}" class = 'btn btn-primary'>Create/Создать</a>
+    {% endif %}
     <table class="table table-bordered">
         <thead>
           <tr>
@@ -17,15 +19,16 @@
         {% if student.gender == 'male' %}
         <tr style="background-color: blue;">
         {% else %}
-        <tr style="background-color: pink;">
+        <tr style="background-color: purple;">
         {% endif %}
             <th scope="row">{{ student.id }}</th>
             <td>{{student.name}}</td>
 
             <td>
                 <a href="{% url 'student_details' student.id %}" class = 'btn-primary btn-sm'>Подробнее</a>
-            </td>
-          </tr>
+                {% if user.is_authenticated %}
+                <a href="{% url 'student_delete' student.id %}" class = 'btn-primary btn-sm'>Удалить</a>
+                {% endif %}
         {% endfor %}
         
         </tbody>
