--- a/course/templates/course/base.html
+++ b/course/templates/course/base.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="{% url 'my_main_page' %}">
                 <img src="{% static 'images/logo.jpg' %}" , alt="Мое лого" width="30" height="24"
                     class="d-inline-block align-text-top">
                 itc</a>
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'my_main_page' %}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'my_main_page' %}">Главная страница </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="http://127.0.0.1:8000/admin/">Админ панель</a>
@@ -42,15 +42,18 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{% url 'branches_list' %}">Branches</a></li>
                             <li><a class="dropdown-item" href="{% url 'groups_list' %}">Groups</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
                             <li><a class="dropdown-item" href="{% url 'students_list' %}">Students</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        {% if user.is_authenticated %}
+                        <a class="nav-link active" aria-current="page" href="{% url 'logout' %}">Выход </a>
+                    {% else %}
+                    <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Вход </a>
+                        {% endif %}
+
                     </li>
+
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
