--- a/course/templates/course/base.html
+++ b/course/templates/course/base.html
@@ -43,6 +43,7 @@
                             <li><a class="dropdown-item" href="{% url 'branches_list' %}">Branches</a></li>
                             <li><a class="dropdown-item" href="{% url 'groups_list' %}">Groups</a></li>
                             <li><a class="dropdown-item" href="{% url 'students_list' %}">Students</a></li>
+                            <li><a class="dropdown-item" href="{% url 'course_list' %}">Couse</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
