--- a/course/templates/course/branches-list.html
+++ b/course/templates/course/branches-list.html
@@ -5,6 +5,7 @@
     <h1>Создать новый филиал</h1>
     {% if user.is_authenticated %}
     <a href = "{% url 'branches_create'%}" class = 'btn btn-primary'>Create/Создать</a>
+    <a href="{% url 'group_random' %}" class="btn btn-primary">Выбрать рандомный филиал</a>
     {% endif %}
     <table class="table table-bordered">
         <thead>
