--- a/course/templates/course/my_page.html
+++ b/course/templates/course/my_page.html
@@ -7,5 +7,6 @@
 <a href = '{% url "branches_list" %}' class = 'btn btn-success'>Branches</a>
 <a href = '{% url "groups_list" %}' class = 'btn btn-success'>Groups</a>
 <a href = '{% url "students_list" %}' class = 'btn btn-success'>Students</a>
+<a href = '{% url "course_list" %}' class = 'btn btn-success'>Course</a>
 
 {% endblock %}
