--- a/course/templates/course/student_detail.html
+++ b/course/templates/course/student_detail.html
@@ -16,6 +16,13 @@
     <p> Пол: <strong> {{student.gender}} </strong> </p>
     <p>Дата рождения: <strong> {{student.date_of_birth}} </strong> </p>
     <p>Группа :<strong> {{student.group}} </strong> </p>
+    <p>Курс(ы): </p>
+    <ul>
+        {% for course in courses %}
+            <li> {{course.name }}</li>
+        {% endfor %}
+
+    </ul>
     {% if user.is_authenticated %}
     <a href = "{% url 'student_edit' student.id %}" class = 'btn btn-primary'>Change/Изменить</a>
     {% endif %}
